--- a/string/string.vcxproj
+++ b/string/string.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{EFC9A5FE-FF36-4813-B625-D5E7E2EB5E91}</ProjectGuid>
+    <ProjectGuid>{5E09045F-FCDB-45E5-B0E7-B57BEFDAF4B6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>study</RootNamespace>
+    <RootNamespace>string</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,6 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="atoi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
